--- a/gb/24/12/7/n14386556.md
+++ b/gb/24/12/7/n14386556.md
@@ -14,11 +14,11 @@
 <p>习近平的这种说法，应该是想把责任推给前任党魁江泽民和胡锦涛，但实际上习近平在中共十八上接任中共党魁后，直到二十大之前，中共迫害法轮功的机构一直还在运作。因此，习近平承认在海外攻击法轮功失败，也包括了中共十八大后的失败。</p>
 <p>习近平上任后，中共仍在迫害法轮功，也仍在不断失败；但中共党魁不甘心失败，试图改变前任们的一些做法，不惜背上迫害法轮功的黑锅。</p>
 <p>习总结失败时认为，法轮功媒体不仅没有被削弱或者消灭，反而在国际上不仅是华文世界、甚至在包括英文的领域，都成了一个起主导性的中共的敌对力量。习认为这是相关单位的重大失职。</p>
-<p>也就是说，中共以举国之力迫害法轮，却失败了；中共海外统战机构操控各种海内外大小媒体，也没能“讲好中国故事”。</p>
+<p>也就是说，中共以举国之力迫害法轮功，却失败了；中共海外统战机构操控各种海内外大小媒体，也没能“讲好中国故事”。</p>
 <p>大纪元等法轮功学员创办的媒体在最初缺人、缺钱的情况下，以非凡的毅力和智慧，坚持传播事实真相，顶住了中共在海外的各种打压，渐渐掌握了媒体话语权。这些媒体接连不断地揭露中共丑恶，不但唤醒了一批又一批寻求真相的中国人，还通过发展英文和多语种媒体，帮助世界各国民众认清了中共的本质。</p>
 <h2>中共持续迫害法轮功却持续失败</h2>
-<p>中共控制了整个中国大陆的媒体资源，竟然都无法对阵大纪元等媒体，这的确是一个巨大的失败。中共使、领馆试图操控华人社区打压法轮功，同样失败了。按照习近平的说法，中共在海外、在国际上投入了巨大的人力、物力、精力和金钱，但中纪委已经掌握，这些资金的相当大一个部分都被浪费掉了，有的被贪污掉了。</p>
-<p>这一点应该算尽人皆知。中共领导人外访时，中、使领馆提前拿到大笔资金，用来组织华人欢迎，并试图遮挡法轮功学员的抗议标语，它们从各地组织来的中国留学生、探亲老人等，乘坐一辆辆大巴车而来，车费、饮食全免，每人有数额不等的补贴，有时还提供住宿费。</p>
+<p>中共控制了整个中国大陆的媒体资源，竟然都无法对阵大纪元等媒体，这的确是一个巨大的失败。中共使领馆试图操控华人社区打压法轮功，同样失败了。按照习近平的说法，中共在海外、在国际上投入了巨大的人力、物力、精力和金钱，但中纪委已经掌握，这些资金的相当大一个部分都被浪费掉了，有的被贪污掉了。</p>
+<p>这一点应该算尽人皆知。中共领导人外访时，中共使领馆提前拿到大笔资金，用来组织华人欢迎，并试图遮挡法轮功学员的抗议标语，它们从各地组织来的中国留学生、探亲老人等，乘坐一辆辆大巴车而来，车费、饮食全免，每人有数额不等的补贴，有时还提供住宿费。</p>
 <p>法轮功学员接触他们中的不少人，很多人明确表示就是来免费旅游的，不少还愿意和法轮功学员交谈、了解法轮功真相。此类欢迎活动后，内部因分赃不均，时常会曝出大小中共代理人贪钱的事；中共操控的华人社团，也经常因利益争夺爆出内讧。</p>
 <p>中共一直向海外中文媒体输血，还出钱在海外找代理人办报纸、杂志、电视台、电台等，操作这些事的人，当然是为了把钱尽可能地揣进自己的腰包。习近平的反腐只能让他们更疯狂地尽快捞钱，中纪委调查驻外使、领馆并不容易，调查海外的众多代理人更是鞭长莫及。中共官员在国内大面积躺平，在海外更会躺平，代理人很多拿了钱不办事，或者虚晃一枪、做做样子而已。</p>
 <p>华人社区一直在议论，那些不知从哪里冒出来的中文小报、杂志，只有三千的发行量，却对外号称发行两万，根本不在乎舆论怎么评价，应该主要是为了向上报假账——拿了两万份的钱，却只印三千份，大多数钱长期都被具体操作的中共官员和代理人瓜分了。</p>
@@ -42,41 +42,45 @@
 <p>中共的卑劣做法，不但暴露了其邪恶的本质，反而帮助大纪元更好地立足于各国主流社会，这是中共至今无法理解的。中共试图干扰、破坏神韵演出的手法也如出一辙，同样陷入失败，反而助神韵扩大了在国际上的知名度。</p>
 <h2>人类正走向新纪元</h2>
 <p>大纪元等媒体走过的路，神韵走过的路都证明，无论中共如何调整组织和策略，试图抹黑、破坏，都不可能达到目的。中共政权走到穷途末路的今天，中共党魁恐怕仍然无法明白为什么？</p>
-<p>在世界普世价值面前，法轮功学员修炼真、善、忍而不断散发的神性光环，必然会得到国际主流社会大众的认同和支持，更会得到神助。中共的假、恶、丑必然会被唾弃，中共与神佛为敌，与人类为敌，最终必然会被铲除。</p>
+<p>在世界普世价值面前，法轮功学员修炼“真、善、忍”而不断散发的神性光环，必然会得到国际主流社会大众的认同和支持，更会得到神助。中共的假、恶、丑必然会被唾弃，中共与神佛为敌，与人类为敌，最终必然会被铲除。</p>
 <p>大纪元等媒体坚持讲真话，因此走上了一条前途无限的光明之路，成为当今社会的指路明灯。中共虽然操控了大量资源，但越讲假话越没人愿意听，还试图打压大纪元等媒体，却不断遭遇失败，如今政权已经岌岌可危。</p>
 <p>人类历史正在走向一个新纪元，任何人都无可阻挡。试图螳臂挡车的人，就等于把自己摆在了历史的车轮之下，结局显而易见。</p>
 <p>中共的结局，现在很多人都清晰地看到了。无论中共党魁、国安部部长、公安部部长，还是统战部、宣传部和中共外交等机构的人，以及那些拿了钱跟着吆喝的人，如果打算继续背迫害法轮功的黑锅，继续逆历史而动，不但会继续失败，还等于选择最终走向悲惨的结局。</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14383010.md#1">11月传出新增17名法轮功学员被迫害离世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14383081.md#1">【新闻大家谈】中南海诡异 大清洗正式开始？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383455.md#1">多地对躺平官员设“蜗牛奖” 分析：惩治无效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383468.md#1">苗华落马 分析：习嫡系原31军人马势衰</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9819782.md#1" target="_blank">布拉格共产主义受难者纪念碑背后故事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366679.md#1">美国梦的传承 港妈延续父辈善举回馈社区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358064.md#1">效职冥府的清朝进士吐露什么天机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364035.md#1">商人突然怦然心动 枯骨果然是稀世珍宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370727.md#1">【新闻欣视角】马斯克要砍四分之三联邦机构？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370020.md#1">【时事金扫描】川普内阁显现 多国在调整政策</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370686.md#1">【菁英论坛】B-21威慑中共 瓦解反介入战略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369592.md#1">珠海越野车冲撞事件酿35死43伤 嫌犯自残</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368891.md#1">男子驾车乱撞 珠海体育中心至少数十人倒地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369195.md#1">Costco被要求召回8万磅黄油 原因令人意外</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369579.md#1">《拥抱太阳的月亮》宋再临离世 享年39岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14369016.md#1">孙俪再携一对儿女挺邓超 曝光另类育儿经</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369372.md#1">曾任反诈骗大使 林逸欣今卷诈骗案 无奈发文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369964.md#1">频道停更3年 大陆网红李子柒恢复更新登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370673.md#1">赵薇遭封杀逾三年 IG晒手转陀螺照引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365327.md#1">三大护眼营养素 这样吃胜过保健品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368489.md#1">研究显示 每天做这件事5分钟就可以降血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369450.md#1">家中这项物品比马桶座脏15倍 你可能不知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370984.md#1">洗衣粉和洗衣精有何不同？ 哪个比较好？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370289.md#1">专家：吃这些“疗愈食物”会让你心情更差</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/7/n14386556.htm">杨威：中共党魁不甘失败 还要攻击法轮功？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386556.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
